# bevy-jam-3

./: Cargo.toml  README.md  index.html
asset_sources/: bvj-3-lib.blend
assets/: bvj-3-level-6.blend  bvj-3-level-6.blend1  bvj-3-level-6.glb  bvj-3-level-7.glb  bvj-3-lib.blend  bvj-3-lib.blend1  bvj-3-lib.glb  bvj-3-lib.gltf
assets/shaders/: post.wgsl
assets/text/: subtitles.txt
docs/: bevy-jam-3-3042d3b445e85a4f.js  index.html
docs/assets/: bvj-3-level-7.glb  bvj-3-lib.gltf
docs/assets/shaders/: post.wgsl
src/: audio.rs  finish.rs  game.rs  hud.rs  main.rs  menu.rs  post_processing.rs
