[package]
name = "bevy-jam-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_rapier3d = { version = "0.21.0", default-features = false, features = [
    "simd-stable",
    "dim3",
    "async-collider",
] }
image = "0.24.6"
include-flate = { version = "0.2.0", features = ["stable"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
smooth-bevy-cameras = "0.8.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
